--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
     </div>
     <div class="container"
         <div class="row row-cols-auto" style="margin-top: 20px;">
-            <div class="card mb-3 col-md-3" style="margin-right: auto;">
+            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Moriah Taylor</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                     <rect width="100%" height="100%" fill="#868e96"></rect>
@@ -51,7 +51,7 @@
                     <a href="#" class="card-link">LinkedIn</a>
                 </div>
             </div>
-            <div class="card mb-3 col-md-3" style="margin-right: auto;">
+            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Nicole Pierre</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                     <rect width="100%" height="100%" fill="#868e96"></rect>
@@ -65,7 +65,7 @@
                     <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
                 </div>
             </div>
-            <div class="card mb-3 col-md-3" style="margin-right: auto;">
+            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Lauren McCarthy</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                     <rect width="100%" height="100%" fill="#868e96"></rect>
@@ -79,7 +79,7 @@
                     <a href="#" class="card-link">LinkedIn</a>
                 </div>
             </div>
-            <div class="card mb-3 col-md-3" style="margin-right: auto;">
+            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left:auto;">
                 <h3 class="card-header">Shalyn Lavoie</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                     <rect width="100%" height="100%" fill="#868e96"></rect>
