--- a/templates/about.html
+++ b/templates/about.html
@@ -54,7 +54,9 @@
             <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Nicole Pierre</h3>
                 <svg xmlns="/images/Nicole_Pierre.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                    <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
+                    <rect width="100%" height="100%" fill="#868e96">
+                        <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
+                    </rect>
                 </svg>
                 <div class="card-body">
                     <p class="card-text">Data Scientist & Web Designer</p>
