--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
         </nav>
     </div>
     <div class="container"
-        <div class="row row-cols-auto" style="margin-top: 20px;">
+        <div class="row row-cols-4" style="margin-top: 20px;">
             <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Moriah Taylor</h3>
                 <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
@@ -53,7 +53,7 @@
             </div>
             <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                 <h3 class="card-header">Nicole Pierre</h3>
-                <svg xmlns="/images/Nicole_Pierre.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                <svg xmlns="/images/NicolePierre.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                     <rect width="100%" height="100%" fill="#868e96">
                         <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
                     </rect>
