--- a/templates/about.html
+++ b/templates/about.html
@@ -36,62 +36,70 @@
         </nav>
     </div>
     <div class="container"
-        <div class="row" style="margin-top: 20px;">
-            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
-                <h3 class="card-header">Moriah Taylor</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Moriah Taylor</text>
-                </svg>
-                <div class="card-body">
-                    <p class="card-text">Data Scientist</p>
-                </div>
-                <div class="card-body">
-                    <a href="https://github.com/moriahtaylor1" class="card-link">GitHub</a>
-                    <a href="#" class="card-link">LinkedIn</a>
-                </div>
-            </div>
-            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
-                <h3 class="card-header">Nicole Pierre</h3>
-                <svg xmlns="/images/NicolePierre.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                    <rect width="100%" height="100%" fill="#868e96">
-                        <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
-                    </rect>
-                </svg>
-                <div class="card-body">
-                    <p class="card-text">Data Scientist & Web Designer</p>
-                </div>
-                <div class="card-body">
-                    <a href="https://github.com/nicpie-bit" class="card-link">GitHub</a>
-                    <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
+        <div class="row row-cols-2" style="margin-top: 20px;">
+            <div class="col">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
+                    <h3 class="card-header">Moriah Taylor</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <rect width="100%" height="100%" fill="#868e96"></rect>
+                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Moriah Taylor</text>
+                    </svg>
+                    <div class="card-body">
+                        <p class="card-text">Data Scientist</p>
+                    </div>
+                    <div class="card-body">
+                        <a href="https://github.com/moriahtaylor1" class="card-link">GitHub</a>
+                        <a href="#" class="card-link">LinkedIn</a>
+                    </div>
                 </div>
             </div>
-            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
-                <h3 class="card-header">Lauren McCarthy</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Lauren McCarthy</text>
-                </svg>
-                <div class="card-body">
-                    <p class="card-text">Data Scientist</p>
-                </div>
-                <div class="card-body">
-                    <a href="https://github.com/lamccart15" class="card-link">GitHub</a>
-                    <a href="#" class="card-link">LinkedIn</a>
+            <div class="col">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
+                    <h3 class="card-header">Nicole Pierre</h3>
+                    <svg xmlns="/images/NicolePierre.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <rect width="100%" height="100%" fill="#868e96">
+                            <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
+                        </rect>
+                    </svg>
+                    <div class="card-body">
+                        <p class="card-text">Data Scientist & Web Designer</p>
+                    </div>
+                    <div class="card-body">
+                        <a href="https://github.com/nicpie-bit" class="card-link">GitHub</a>
+                        <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
+                    </div>
                 </div>
             </div>
-            <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left:auto;">
-                <h3 class="card-header">Shalyn Lavoie</h3>
-                <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                    <rect width="100%" height="100%" fill="#868e96"></rect>
-                    <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Shalyn Lavoie</text>
-                </svg>
-                <div class="card-body">
-                    <p class="card-text">Data Scientist</p>
+            <div class="col">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
+                    <h3 class="card-header">Lauren McCarthy</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <rect width="100%" height="100%" fill="#868e96"></rect>
+                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Lauren McCarthy</text>
+                    </svg>
+                    <div class="card-body">
+                        <p class="card-text">Data Scientist</p>
+                    </div>
+                    <div class="card-body">
+                        <a href="https://github.com/lamccart15" class="card-link">GitHub</a>
+                        <a href="#" class="card-link">LinkedIn</a>
+                    </div>
                 </div>
-                <div class="card-body">
-                    <a href="https://github.com/shalynalavoie" class="card-link">GitHub</a>
-                    <a href="#" class="card-link">LinkedIn</a>
+            </div>
+            <div class="col">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left:auto;">
+                    <h3 class="card-header">Shalyn Lavoie</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <rect width="100%" height="100%" fill="#868e96"></rect>
+                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Shalyn Lavoie</text>
+                    </svg>
+                    <div class="card-body">
+                        <p class="card-text">Data Scientist</p>
+                    </div>
+                    <div class="card-body">
+                        <a href="https://github.com/shalynalavoie" class="card-link">GitHub</a>
+                        <a href="#" class="card-link">LinkedIn</a>
+                    </div>
                 </div>
             </div>
         </div>
