--- a/templates/about.html
+++ b/templates/about.html
@@ -38,7 +38,7 @@
     <div class="container"
         <div class="row row-cols-2" style="margin-top: 20px;">
             <div class="col">
-                <div class="card mb-3" style="margin-right: auto; margin-left: auto;">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Moriah Taylor</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                         <rect width="100%" height="100%" fill="#868e96"></rect>
@@ -54,12 +54,10 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mb-3" style="margin-right: auto; margin-left: auto;">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Nicole Pierre</h3>
-                    <svg xmlns="/images/NicolePierre.jpg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96">
-                            <img src="/images/Nicole_Pierre.jpg" class="profile-pic" alt="Nicole Pierre">
-                        </rect>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <image src="/images/NicolePierre.jpg" width="100%" height= "100%">
                     </svg>
                     <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
@@ -71,7 +69,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mb-3" style="margin-right: auto; margin-left: auto;">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Lauren McCarthy</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                         <rect width="100%" height="100%" fill="#868e96"></rect>
@@ -87,7 +85,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card mb-3" style="margin-right: auto; margin-left:auto;">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left:auto;">
                     <h3 class="card-header">Shalyn Lavoie</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                         <rect width="100%" height="100%" fill="#868e96"></rect>
