--- a/templates/about.html
+++ b/templates/about.html
@@ -57,7 +57,7 @@
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Nicole Pierre</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <image src="/images/NicolePierre.jpg" width="100%" height= "100%">
+                        <img src="/images/NicolePierre.jpg" width="100%" height= "100%" alt="Nicole Pierre">
                     </svg>
                     <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
