--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
     </div>
     <div class="container"
         <div class="row row-cols-2" style="margin-top: 20px;">
-            <div class="col">
+            
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Moriah Taylor</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
@@ -52,13 +52,10 @@
                         <a href="#" class="card-link">LinkedIn</a>
                     </div>
                 </div>
-            </div>
-            <div class="col">
+            
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Nicole Pierre</h3>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <img src="/images/NicolePierre.jpg" width="100%" height= "100%" alt="Nicole Pierre">
-                    </svg>
+                    <img src="/images/NicolePierre.jpg" alt="Nicole Pierre">
                     <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
                     </div>
@@ -67,8 +64,8 @@
                         <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
                     </div>
                 </div>
-            </div>
-            <div class="col">
+            
+            
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Lauren McCarthy</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
@@ -83,8 +80,8 @@
                         <a href="#" class="card-link">LinkedIn</a>
                     </div>
                 </div>
-            </div>
-            <div class="col">
+            
+            
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left:auto;">
                     <h3 class="card-header">Shalyn Lavoie</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
@@ -99,7 +96,7 @@
                         <a href="#" class="card-link">LinkedIn</a>
                     </div>
                 </div>
-            </div>
+            
         </div>
     </div>
 </body>
