--- a/templates/about.html
+++ b/templates/about.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="card-body">
                         <a href="https://github.com/moriahtaylor1" class="card-link">GitHub</a>
-                        <a href="#" class="card-link">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/moriah-taylor/" class="card-link">LinkedIn</a>
                     </div>
                 </div>
             
@@ -77,7 +77,7 @@
                     </div>
                     <div class="card-body">
                         <a href="https://github.com/lamccart15" class="card-link">GitHub</a>
-                        <a href="#" class="card-link">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/lauren-mccarthy-77332540/" class="card-link">LinkedIn</a>
                     </div>
                 </div>
             
@@ -93,7 +93,7 @@
                     </div>
                     <div class="card-body">
                         <a href="https://github.com/shalynalavoie" class="card-link">GitHub</a>
-                        <a href="#" class="card-link">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/shalynalavoie/" class="card-link">LinkedIn</a>
                     </div>
                 </div>
             
